# edea

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CHANGELOG  README.md  flake.nix  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.vale/styles/config/vocabularies/EDeA/: accept.txt
docs/: _redirects  cli.rst  conf.py  generate_versions.json.py  index.rst
docs/kicad/: index.rst
docs/reference/: cli.rst  index.rst
docs/reference/kicad/: checker.rst  index.rst
docs/types/: index.rst  pcb_layers.rst
docs/types/pcb/: index.rst  pcb.rst
docs/types/schematic/: schematic.rst
edea/: __main__.py  _utils.py  bbox.py  cli.py  drawable.py  edea.py  imgdiff.py  metadata.py  parser.py  util.py
edea/cli/: __init__.py  add.py
edea/draw/: __init__.py  draw.py
edea/draw/pcb/: __init__.py  pcb.py
edea/draw/pcb/utils/: kicad_version.py  svg.py
edea/draw/schematic/: schematic.py  shapes.py  symbol.py
edea/draw/themes/: style.py  themes.py  types.py
edea/kicad/: _config.py  _equality.py  _fields.py  _kicad_cli.py  _parse.py  _serialize.py  base.py  common.py  design_rules.py  is_kicad_expr.py  meta.py  parser.py  project.py  serializer.py
edea/kicad/checker/: README.md  __init__.py  drc.py  erc.py  reporter.py
edea/kicad/pcb/: __init__.py  base.py  common.py  footprint.py  graphics.py  layer.py  pcb.py
edea/kicad/schematic/: __init__.py  base.py  schematic.py  shapes.py  symbol.py
edea/kicad/schematic_group/: __init__.py
edea/types/: _equality.py  _type_utils.py  base.py  common.py  meta.py  number.py  parser.py  project.py  s_expr.py  serializer.py
edea/types/pcb/: __init__.py  base.py  common.py  footprint.py  graphics.py  layer.py  layers.py  pcb.py
edea/types/schematic/: schematic.py  shapes.py  symbol.py
tests/: _kicad_cli.py  test_insert_layout.py  test_kicad_checker.py  test_kicad_design_rules.py  test_mem_use.py  test_metadata.py  test_parse.py  test_parse_all.py  test_parse_one.py  test_pcb.py  test_pcb_size.py  test_project.py  test_render.py  test_schematic_group.py  test_schematic_merge.py  test_serialize_all.py  test_types.py  util.py
tests/kicad_projects/MP2451/: MP2451.kicad_pcb  MP2451.kicad_pro  MP2451.kicad_sch  drc.json  erc.json
tests/kicad_projects/ferret/: control.kicad_sch  ferret.kicad_pcb
tests/kicad_projects/labels/: labels.kicad_pro  labels.kicad_sch
tests/kicad_projects/leako/: ColecoVision Clone.kicad_pcb  ColecoVision Clone.kicad_pro  ColecoVision Clone.kicad_sch  Controllers.kicad_sch  Expansion.kicad_sch  Power.kicad_sch  Sound.kicad_sch  Video.kicad_sch
tests/kicad_projects/pcb_size/arc/: arc.kicad_pcb  arc_2.kicad_pcb  arc_3.kicad_pcb  arc_4.kicad_pcb
tests/kicad_projects/pcb_size/circle/: circle.kicad_pcb
tests/kicad_projects/pcb_size/line/: line.kicad_pcb
tests/kicad_projects/pcb_size/polygon/: polygon.kicad_pcb
tests/kicad_projects/pcb_size/rect/: rect.kicad_pcb
tests/kicad_projects/schematic_group/: schematic_group.kicad_pro  schematic_group.kicad_sch  sub_sheet_1.kicad_sch
tests/property_tests/: _utils.py  config.py  test_create.py  test_expr.py  test_serialize.py  test_serialize_files.py  utils.py
