[tool.poetry]
name = "edea"
version = "0.5.0"
description = "KiCAD file format parser and tools"
authors = [
    "Elen Eisendle <ln@calcifer.ee>",
    "Zoé Bőle <zoe@astech.hu>",
    "Kaspar Emanuel <kaspar@kitspace.org>",
    "Abdulrhmn Ghanem <abdoghanem160@gmail.com>",
]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
pydantic = "^1.10.2"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^23.1.0"
hypothesis = "^6.79.1"
pylint = "2.17.2"
pyright = "1.1.326"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"
ruff = "^0.0.261"
pylint-pydantic = "^0.1.8"
pylint-relative-imports = "^0.0.4"
sphinxawesome-theme = "5.0.0b3"
nox = "^2023.4.22"
pytest-only = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
